full text function moving to current select (BUG#4822)